:heavy_minus_sign: eliminado prettier y sus configuraciones

--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon -L",
+    "test": "mocha -w ./tests/**/*.spec.js",
     "lint": "eslint ./",
     "lint:fix": "eslint ./ --fix"
   },
@@ -13,16 +15,23 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
     "mocha": "^10.0.0",
-    "prettier": "^2.7.1",
     "standard": "^17.0.0",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "supertest-session": "^4.1.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.2.9"
   },
   "eslintConfig": {
     "extends": [
