--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "lint": "standard",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
