:wrench: cambiando comando build

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "challenge para CopyWrite que consiste en una api que retorna un texto invertido y un front que permite al usuario ingresar un texto para que la api lo invierta, mostrando todos los resultados en el front",
   "main": "index.jsx",
   "scripts": {
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack -p -progress --colors --bail --optimize-dedupe --optimize-minimize",
     "lint": "standard",
     "dev": "webpack-dev-server --open",
     "postinstall": "npm run build"
