--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode production",
     "lint": "standard",
     "dev": "webpack-dev-server --open",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "start": "webpack --mode production && npx serve dist -s"
   },
   "engines": {
     "node": "12.22.12"
