--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "lint": "standard",
     "dev": "webpack-dev-server --open",
     "postinstall": "npm run build",
-    "start": "webpack --mode production && npx serve dist -s"
+    "start": "node server.js"
   },
   "engines": {
     "node": "12.22.12"
@@ -23,6 +23,7 @@
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.6",
+    "html-loader": "^4.1.0",
     "html-webpack-plugin": "3.2.0",
     "standard": "12.0.1",
     "webpack": "4.31.0",
@@ -34,6 +35,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
+    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
