--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.6",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "4.5.0",
+    "html-loader": "1.3.2",
     "standard": "12.0.1",
     "webpack": "4.31.0",
     "webpack-cli": "3.3.2",
